# mcpx

./: README.md  pyproject.toml
mcpx_app/: __init__.py  banner.py  cli.py  probe.py  store.py
tests/: test_mcpx.py
