[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpx"
version = "0.1.0"
description = "MAD MCP probe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.27",
  "anyio>=4.0",
]

[project.scripts]
mcpx = "mcpx_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
