[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpx"
version = "0.2.0"
description = "Black-box reconnaissance probe for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "rich>=13.0", "httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
mcpx = "mcpx_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpx_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
